--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -67,3 +67,7 @@
 [[constraint]]
   name = "github.com/moby/buildkit"
   version = "0.6.3"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/GeertJohan/go.rice"
